Assets/ANTLR/.antlr/RulesParser.java
// Generated from e:\UnityProjects\GRERPG\Assets\ANTLR\Rules.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		NAME=25, UP_TO=26, FORWARDS_LEFT=27, FORWARDS_RIGHT=28, BACKWARDS_LEFT=29, 
		BACKWARDS_RIGHT=30, FORWARDS=31, BACKWARDS=32, LEFT=33, RIGHT=34, AROUND=35, 
		IT=36, START_COMBAT=37, ACTIVATE=38, FlOAT=39, ONE=40, INT=41, WS=42, 
		NL=43;
	public static final int
		RULE_spell = 0, RULE_imperative = 1, RULE_moveUnit = 2, RULE_spawnUnit = 3, 
		RULE_summonCardInHand = 4, RULE_destroyUnits = 5, RULE_chooseUnit = 6, 
		RULE_unitFightsUnit = 7, RULE_unitSelector = 8, RULE_unit = 9, RULE_stats = 10, 
		RULE_type = 11, RULE_behaviour = 12, RULE_instruction = 13, RULE_action = 14, 
		RULE_move = 15, RULE_turn = 16, RULE_damage = 17, RULE_stepAmount = 18, 
		RULE_directionOR = 19, RULE_direction = 20, RULE_targetUnit = 21, RULE_unitDescription = 22, 
		RULE_trigger = 23;
	public static final String[] ruleNames = {
		"spell", "imperative", "moveUnit", "spawnUnit", "summonCardInHand", "destroyUnits", 
		"chooseUnit", "unitFightsUnit", "unitSelector", "unit", "stats", "type", 
		"behaviour", "instruction", "action", "move", "turn", "damage", "stepAmount", 
		"directionOR", "direction", "targetUnit", "unitDescription", "trigger"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Move'", "'and'", "'.'", "'Summon'", "'Put'", "'into your hand.'", 
		"'Destroy each'", "'Pick'", "'fights'", "'unit'", "'-'", "'/'", "'Knight'", 
		"'Rogue'", "', then'", "'move'", "'turn'", "'deal'", "'damage'", "'steps'", 
		"'step'", "','", "'or'", "'target'", null, "'up to'", "'forwards left'", 
		"'forwards right'", "'backwards left'", "'backwards right'", "'forwards'", 
		"'backwards'", "'left'", "'right'", "'around'", null, "'At the beginning of combat'", 
		"'When this unit is activated'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "NAME", "UP_TO", "FORWARDS_LEFT", "FORWARDS_RIGHT", "BACKWARDS_LEFT", 
		"BACKWARDS_RIGHT", "FORWARDS", "BACKWARDS", "LEFT", "RIGHT", "AROUND", 
		"IT", "START_COMBAT", "ACTIVATE", "FlOAT", "ONE", "INT", "WS", "NL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Rules.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SpellContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RulesParser.EOF, 0); }
		public List<ImperativeContext> imperative() {
			return getRuleContexts(ImperativeContext.class);
		}
		public ImperativeContext imperative(int i) {
			return getRuleContext(ImperativeContext.class,i);
		}
		public SpellContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spell; }
	}

	public final SpellContext spell() throws RecognitionException {
		SpellContext _localctx = new SpellContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spell);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				imperative();
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__23) | (1L << IT))) != 0) );
			setState(53);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImperativeContext extends ParserRuleContext {
		public MoveUnitContext moveUnit() {
			return getRuleContext(MoveUnitContext.class,0);
		}
		public SpawnUnitContext spawnUnit() {
			return getRuleContext(SpawnUnitContext.class,0);
		}
		public SummonCardInHandContext summonCardInHand() {
			return getRuleContext(SummonCardInHandContext.class,0);
		}
		public DestroyUnitsContext destroyUnits() {
			return getRuleContext(DestroyUnitsContext.class,0);
		}
		public ChooseUnitContext chooseUnit() {
			return getRuleContext(ChooseUnitContext.class,0);
		}
		public UnitFightsUnitContext unitFightsUnit() {
			return getRuleContext(UnitFightsUnitContext.class,0);
		}
		public ImperativeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imperative; }
	}

	public final ImperativeContext imperative() throws RecognitionException {
		ImperativeContext _localctx = new ImperativeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imperative);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				moveUnit();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				spawnUnit();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				summonCardInHand();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 4);
				{
				setState(58);
				destroyUnits();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 5);
				{
				setState(59);
				chooseUnit();
				}
				break;
			case T__23:
			case IT:
				enterOuterAlt(_localctx, 6);
				{
				setState(60);
				unitFightsUnit();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveUnitContext extends ParserRuleContext {
		public TargetUnitContext targetUnit() {
			return getRuleContext(TargetUnitContext.class,0);
		}
		public TerminalNode UP_TO() { return getToken(RulesParser.UP_TO, 0); }
		public StepAmountContext stepAmount() {
			return getRuleContext(StepAmountContext.class,0);
		}
		public List<DirectionORContext> directionOR() {
			return getRuleContexts(DirectionORContext.class);
		}
		public DirectionORContext directionOR(int i) {
			return getRuleContext(DirectionORContext.class,i);
		}
		public MoveUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveUnit; }
	}

	public final MoveUnitContext moveUnit() throws RecognitionException {
		MoveUnitContext _localctx = new MoveUnitContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moveUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__0);
			setState(64);
			targetUnit();
			setState(65);
			match(UP_TO);
			setState(66);
			stepAmount();
			setState(67);
			directionOR();
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(68);
				match(T__1);
				setState(69);
				directionOR();
				}
			}

			setState(72);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpawnUnitContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(RulesParser.NAME, 0); }
		public TerminalNode INT() { return getToken(RulesParser.INT, 0); }
		public TerminalNode ONE() { return getToken(RulesParser.ONE, 0); }
		public SpawnUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spawnUnit; }
	}

	public final SpawnUnitContext spawnUnit() throws RecognitionException {
		SpawnUnitContext _localctx = new SpawnUnitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_spawnUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__3);
			setState(75);
			_la = _input.LA(1);
			if ( !(_la==ONE || _la==INT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(76);
			match(NAME);
			setState(77);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SummonCardInHandContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(RulesParser.NAME, 0); }
		public TerminalNode INT() { return getToken(RulesParser.INT, 0); }
		public TerminalNode ONE() { return getToken(RulesParser.ONE, 0); }
		public SummonCardInHandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_summonCardInHand; }
	}

	public final SummonCardInHandContext summonCardInHand() throws RecognitionException {
		SummonCardInHandContext _localctx = new SummonCardInHandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_summonCardInHand);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(T__4);
			setState(80);
			_la = _input.LA(1);
			if ( !(_la==ONE || _la==INT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(81);
			match(NAME);
			setState(82);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DestroyUnitsContext extends ParserRuleContext {
		public UnitSelectorContext unitSelector() {
			return getRuleContext(UnitSelectorContext.class,0);
		}
		public DestroyUnitsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_destroyUnits; }
	}

	public final DestroyUnitsContext destroyUnits() throws RecognitionException {
		DestroyUnitsContext _localctx = new DestroyUnitsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_destroyUnits);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__6);
			setState(85);
			unitSelector();
			setState(86);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChooseUnitContext extends ParserRuleContext {
		public TargetUnitContext targetUnit() {
			return getRuleContext(TargetUnitContext.class,0);
		}
		public ChooseUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chooseUnit; }
	}

	public final ChooseUnitContext chooseUnit() throws RecognitionException {
		ChooseUnitContext _localctx = new ChooseUnitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_chooseUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__7);
			setState(89);
			targetUnit();
			setState(90);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitFightsUnitContext extends ParserRuleContext {
		public List<TargetUnitContext> targetUnit() {
			return getRuleContexts(TargetUnitContext.class);
		}
		public TargetUnitContext targetUnit(int i) {
			return getRuleContext(TargetUnitContext.class,i);
		}
		public UnitFightsUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitFightsUnit; }
	}

	public final UnitFightsUnitContext unitFightsUnit() throws RecognitionException {
		UnitFightsUnitContext _localctx = new UnitFightsUnitContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_unitFightsUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			targetUnit();
			setState(93);
			match(T__8);
			setState(94);
			targetUnit();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitSelectorContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public UnitSelectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unitSelector; }
	}

	public final UnitSelectorContext unitSelector() throws RecognitionException {
		UnitSelectorContext _localctx = new UnitSelectorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unitSelector);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				match(T__9);
				}
				break;
			case T__12:
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				type();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnitContext extends ParserRuleContext {
		public StatsContext stats() {
			return getRuleContext(StatsContext.class,0);
		}
		public BehaviourContext behaviour() {
			return getRuleContext(BehaviourContext.class,0);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public UnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unit; }
	}

	public final UnitContext unit() throws RecognitionException {
		UnitContext _localctx = new UnitContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				type();
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__12 || _la==T__13 );
			setState(105);
			match(T__10);
			setState(106);
			stats();
			setState(107);
			behaviour();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatsContext extends ParserRuleContext {
		public List<TerminalNode> INT() { return getTokens(RulesParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(RulesParser.INT, i);
		}
		public StatsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stats; }
	}

	public final StatsContext stats() throws RecognitionException {
		StatsContext _localctx = new StatsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_stats);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(INT);
			setState(110);
			match(T__11);
			setState(111);
			match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if ( !(_la==T__12 || _la==T__13) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BehaviourContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public BehaviourContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_behaviour; }
	}

	public final BehaviourContext behaviour() throws RecognitionException {
		BehaviourContext _localctx = new BehaviourContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_behaviour);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==START_COMBAT || _la==ACTIVATE) {
				{
				{
				setState(115);
				instruction();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public TriggerContext trigger() {
			return getRuleContext(TriggerContext.class,0);
		}
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_instruction);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			trigger();
			setState(122);
			action();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__14) {
				{
				setState(123);
				match(T__14);
				setState(124);
				action();
				}
			}

			setState(127);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public MoveContext move() {
			return getRuleContext(MoveContext.class,0);
		}
		public TurnContext turn() {
			return getRuleContext(TurnContext.class,0);
		}
		public DamageContext damage() {
			return getRuleContext(DamageContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_action);
		try {
			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				move();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				turn();
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 3);
				{
				setState(131);
				damage();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveContext extends ParserRuleContext {
		public TerminalNode UP_TO() { return getToken(RulesParser.UP_TO, 0); }
		public StepAmountContext stepAmount() {
			return getRuleContext(StepAmountContext.class,0);
		}
		public DirectionContext direction() {
			return getRuleContext(DirectionContext.class,0);
		}
		public MoveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_move; }
	}

	public final MoveContext move() throws RecognitionException {
		MoveContext _localctx = new MoveContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_move);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__15);
			setState(135);
			match(UP_TO);
			setState(136);
			stepAmount();
			setState(137);
			direction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TurnContext extends ParserRuleContext {
		public TerminalNode LEFT() { return getToken(RulesParser.LEFT, 0); }
		public TerminalNode RIGHT() { return getToken(RulesParser.RIGHT, 0); }
		public TerminalNode AROUND() { return getToken(RulesParser.AROUND, 0); }
		public TurnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_turn; }
	}

	public final TurnContext turn() throws RecognitionException {
		TurnContext _localctx = new TurnContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_turn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__16);
			setState(140);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LEFT) | (1L << RIGHT) | (1L << AROUND))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DamageContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(RulesParser.INT, 0); }
		public DamageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_damage; }
	}

	public final DamageContext damage() throws RecognitionException {
		DamageContext _localctx = new DamageContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_damage);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(T__17);
			setState(143);
			match(INT);
			setState(144);
			match(T__18);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepAmountContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(RulesParser.INT, 0); }
		public TerminalNode ONE() { return getToken(RulesParser.ONE, 0); }
		public StepAmountContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stepAmount; }
	}

	public final StepAmountContext stepAmount() throws RecognitionException {
		StepAmountContext _localctx = new StepAmountContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_stepAmount);
		try {
			setState(150);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(146);
				match(INT);
				setState(147);
				match(T__19);
				}
				break;
			case ONE:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				match(ONE);
				setState(149);
				match(T__20);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectionORContext extends ParserRuleContext {
		public List<DirectionContext> direction() {
			return getRuleContexts(DirectionContext.class);
		}
		public DirectionContext direction(int i) {
			return getRuleContext(DirectionContext.class,i);
		}
		public DirectionORContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directionOR; }
	}

	public final DirectionORContext directionOR() throws RecognitionException {
		DirectionORContext _localctx = new DirectionORContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_directionOR);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			direction();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21 || _la==T__22) {
				{
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__21) {
					{
					{
					setState(153);
					match(T__21);
					setState(154);
					direction();
					}
					}
					setState(159);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(160);
				match(T__22);
				setState(161);
				direction();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectionContext extends ParserRuleContext {
		public TerminalNode FORWARDS() { return getToken(RulesParser.FORWARDS, 0); }
		public TerminalNode BACKWARDS() { return getToken(RulesParser.BACKWARDS, 0); }
		public TerminalNode LEFT() { return getToken(RulesParser.LEFT, 0); }
		public TerminalNode RIGHT() { return getToken(RulesParser.RIGHT, 0); }
		public TerminalNode FORWARDS_LEFT() { return getToken(RulesParser.FORWARDS_LEFT, 0); }
		public TerminalNode FORWARDS_RIGHT() { return getToken(RulesParser.FORWARDS_RIGHT, 0); }
		public TerminalNode BACKWARDS_LEFT() { return getToken(RulesParser.BACKWARDS_LEFT, 0); }
		public TerminalNode BACKWARDS_RIGHT() { return getToken(RulesParser.BACKWARDS_RIGHT, 0); }
		public DirectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_direction; }
	}
